# pnsol-deltaq-clone

./: .gitignore  DeltaQ.cabal  cabal.project
lib/DeltaQ/: Algebra.hs  GSV.hs
lib/DeltaQ/Algebra/: Class.hs
lib/DeltaQ/Numeric/: PDF.hs  Simple.hs
lib/DeltaQ/Numeric/CDF/: Types.hs
lib/DeltaQ/Visualisation/: ChartPlot.hs  PlotUtils.hs
tests/: DQNormalisation.hs  NumericAspects.hs
tests/DeltaQ/Algebra/: NormalisationSpec.hs
