name:           DeltaQ
version:        0.1.3
cabal-version:  >= 1.10
build-type:     Simple
author:         Neil Davies
license:        AllRightsReserved
copyright:      Predictable Network Solutions Limited, 2011-2016

library
  build-depends:      base >= 4
  default-language:   Haskell2010
  hs-source-dirs:     lib
  ghc-options:        -Wall
  exposed-modules:    DeltaQ.Algebra
                    , DeltaQ.Algebra.Simplification
                    , DeltaQ.Algebra.Class
                    , DeltaQ.Algebra.Type
                    , DeltaQ.Algebra.DelayModel.SimpleUniform
                    , DeltaQ.GSV
                    , DeltaQ.GSV.ATM
                    , DeltaQ.RationalProbabilityDoubleDelay
                    , DeltaQ.QTA.Support
  default-extensions: UnicodeSyntax
  other-extensions:   KindSignatures
                    , GADTs
                    , MultiParamTypeClasses
                    , FlexibleContexts
                    , FlexibleInstances

-- test-suite dq-normalisation
--   type:               detailed-0.9
--   hs-source-dirs:     tests
--   test-module:        DQNormalisation
--   build-depends:      base
--                     , DeltaQ
--                     , Cabal
--                     , QuickCheck 
--                     , random
--   ghc-options:        -Wall -rtsopts -threaded
--   default-language:   Haskell2010
--   default-extensions: StandaloneDeriving
--                     , TypeSynonymInstances

test-suite dq-numeric-tests
  type:               detailed-0.9
  hs-source-dirs:     tests
  test-module:        NumericAspects
  build-depends:      base
                    , DeltaQ
  ghc-options:        -Wall -rtsopts -threaded
  default-language:   Haskell2010
